added books and authors, added book controller

--- a/src/main/resources/errors/messages.properties
+++ b/src/main/resources/errors/messages.properties
@@ -1,3 +1,4 @@
 login.inUse=Пользователь с таким логин уже существует
 login.isEmpty=Поле логин не может быть пустым
+login.doesNotExist=Пользователя с таким логин не существует
 email.isEmpty=Поле пароль не может быть пустым
